sections/section-050/module-01/playground/examples/04-virtualservice-navcom-delay-and-abort.yaml
# Delay and abort together on the same route.
# Each request is checked separately for both:
#   - 50% get a 1s delay
#   - 20% get HTTP 503
# A request can get both (delay first, then abort).
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: navcom
  namespace: starfleet
spec:
  hosts:
  - navcom
  http:
  - fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 1s
      abort:
        percentage:
          value: 20
        httpStatus: 503
    route:
    - destination:
        host: navcom
        subset: v1
